# chaTTY

./: README.md  pyproject.toml
chatty/: main.py  network.py
