[project]
name = "chatty"
version = "0.1.0"
description = "chaTTY is a terminal-based chatting application for people who live in the terminal."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncer>=0.0.17",
    "cryptography>=48.0.0",
    "noiseprotocol>=0.3.1",
    "textual>=8.2.7",
]


[project.scripts]
chatty = "chatty.main:main"