[project]
name = "chatty"
version = "0.1.0"
description = "chaTTY is a terminal-based chatting application for people who live in the terminal."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiortc>=1.14.0",
    "textual>=8.2.7",
]


[project.scripts]
chatty = "chatty.main:main"
